fixed table overflow

--- a/Frontend/Dashboard/src/styles/programs_popup.module.css
+++ b/Frontend/Dashboard/src/styles/programs_popup.module.css
@@ -114,3 +114,9 @@
         margin-block: 2px;
     }
 }
+
+@media screen and (max-width: 485px) {
+    .workout_table {
+        display: block;
+    }
+}
